sqlite/conformance/sqlite-sqltests/snapshot_tests/null_peek/snapshots/null_peek__filter-is-null-peek.snap
---
source: null_peek.sqltest
expression: SELECT count(*) FILTER (WHERE val IS NULL) FROM t;
info:
  statement_type: SELECT
  tables:
  - t
  setup_blocks:
  - t
  database: ':memory:'
---
QUERY PLAN
`--SCAN t

BYTECODE
addr  opcode              p1  p2  p3  p4          p5  comment
   0  Init                 0  11   0               0  Start at 11
   1  Null                 0   2   0               0  r[2]=NULL
   2  OpenRead             0   2   0  k(3,B,B,B)   0  table=t, root=2, iDb=0
   3  Rewind               0   7   0               0  Rewind table t
   4    ColumnIsNullJump   0   2   6               0  if t.val IS NOT NULL goto 6 (peek, no decode)
   5    AggStep            0   3   2  count        0  accum=r[2] step(r[3])
   6  Next                 0   4   0               1
   7  AggFinal             0   2   0  count        0  accum=r[2]
   8  Copy                 2   1   0               0  r[1]=r[2]
   9  ResultRow            1   1   0               0  output=r[1]
  10  Halt                 0   0   0               0
  11  Transaction          0   1   1               0  iDb=0 tx_mode=Read
  12  Integer              1   3   0               0  r[3]=1
  13  Goto                 0   1   0               0
